code_quality_improvement_basicauth